syntax = "proto3";

option csharp_namespace = "WeatherNamingService";

package greet;

service WeatherNaming {
  rpc DescribeWeather (WeatherRequest) returns (WeatherReply);
}

message WeatherRequest {
  int32 temperature = 1;
}

message WeatherReply {
  string message = 1;
}
